<resources>
    <string name="app_name">Giros</string>
    <string name="usernameEditText">Username Github</string>
    <string name="usernameButton">Submit</string>
    <string name="loadingText">Loading…</string>
    <string name="resultRoastingTextView">Result</string>
    <string name="usernameEmpty">Please fill field username…</string>
    <string name="loadingResult">Generating…</string>
    <string name="title_github">Roasting Github</string>
    <string name="title_support">Support Creator</string>

    <string name="noInternet">No Internet Connection. Please check your network settings</string>

    <string name="open_drawer">true</string>
    <string name="closed_drawer">false</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trakteer_saya">Trakteer Saya</string>

    <!-- Alert -->
    <string name="titleAlertTextView">Alert</string>
    <string name="alertRoastingTextView">
        Please prepare yourself mentally as the words used may be offensive.
    </string>
</resources>